Configured `JavaCompile` with `--enable-preview` for Panama build, and moved Maven publish configurations to `netrune` Gradle build plugin